--- a/src/app/components/crud-data-catalogo-agregar/crud-data-catalogo-agregar.component.html
+++ b/src/app/components/crud-data-catalogo-agregar/crud-data-catalogo-agregar.component.html
@@ -1,1 +1,66 @@
-<p>crud-data-catalogo-agregar works!</p>
+<div class="container">
+  <form [formGroup]="formRegistrar">
+     <div class="mat-dialog-content">
+
+      <div class="row">
+          <mat-toolbar color="primary">
+              <span>Registra DataCatalogo</span>
+          </mat-toolbar>
+      </div>
+      <div class="row" style="margin-top: 3%">
+          <mat-form-field class="col-md-6">
+              <mat-label>Nombre</mat-label>
+              <input matInput [(ngModel)]="data.descripcion" formControlName="validaDescripcion">
+              <mat-hint style="color: red;" *ngIf="formRegistrar.controls.validaDescripcion.touched">
+                  <span *ngIf="formRegistrar.controls.validaDescripcion.hasError('required')">
+                      La descripción es requerida
+                  </span>
+                  <span *ngIf="formRegistrar.controls.validaDescripcion.hasError('pattern')">
+                      La descripción es de 3 a 30 caracteres
+                  </span>
+                  <span *ngIf="formRegistrar.controls.validaDescripcion.hasError('existeDescripcion')">
+                      La descripción ya existe
+                  </span>
+              </mat-hint>
+          </mat-form-field>
+
+          <mat-form-field class="col-md-6">
+              <mat-label>Tipo</mat-label>
+              <mat-select [(ngModel)]="data.catalogo!.descripcion" formControlName="idCatalogo">
+              <!--<mat-option value=-1> [Seleccione] </mat-option>-->
+                  <mat-option *ngFor="let x of catalogoList" [value]="x.idCatalogo">
+                      {{x.descripcion}}
+                  </mat-option>
+              </mat-select>
+              <mat-hint style="color: red;" *ngIf="formRegistrar.controls.validaDescripcion.touched">
+                  <span *ngIf="formRegistrar.controls.validaDescripcion.hasError('required')">
+                      El tipo es requerido
+                  </span>
+              </mat-hint>
+          </mat-form-field>
+      </div>
+      <div class="row" style="margin-top: 3%">
+
+      </div>
+
+      </div>
+
+      <div class="row" style="margin-top: 3%; margin-left: auto; margin-right: auto; max-width: fit-content;">
+           <div mat-dialog-actions>
+           <button mat-raised-button
+                          type="submit"
+                          color="primary"
+                          [disabled]="formRegistrar.invalid"
+                          [mat-dialog-close]="1"
+                          (click)="registrarDataCatalogo()">Registra
+           </button>
+          <button mat-button
+                          type="submit"
+                          (click)="salir()"
+                          [mat-dialog-close]="2"
+                          >Salir
+          </button>
+          </div>
+      </div>
+  </form>
+</div>
