--- a/src/app/components/crud-data-catalogo/crud-data-catalogo.component.css
+++ b/src/app/components/crud-data-catalogo/crud-data-catalogo.component.css
@@ -1,4 +1,4 @@
-.mat-column-idEjemplo {
+.mat-column-idDataCatalogo {
   flex: 0 0 8%;
 }
 
@@ -6,21 +6,6 @@
   flex: 0 0 10%;
 }
 
-.mat-column-dias {
-  flex: 0 0 8%;
-}
-
-.mat-column-longitud {
-  flex: 0 0 8%;
-}
-
-.mat-column-pais {
-  flex: 0 0 10%;
-}
-
-.mat-column-ubigeo {
-  flex: 0 0 25%;
-}
 
 .mat-column-estado {
   flex: 0 0 8%;
