--- a/src/app/components/consulta-entidad-finaciera/consulta-entidad-finaciera.component.html
+++ b/src/app/components/consulta-entidad-finaciera/consulta-entidad-finaciera.component.html
@@ -1,1 +1,79 @@
-<p>consulta-entidad-finaciera works!</p>
+<app-menu></app-menu>
+<div class="container">
+
+    <div class="row">
+          <mat-toolbar color="primary" >    
+          <span>Consulta Entidad Financiera</span>    
+          </mat-toolbar>  
+    </div>
+    <div  class="row"  style="margin-top: 3%">
+            <mat-form-field class="col-md-5">
+                <mat-label>Nombre:</mat-label>
+                <input  matInput  [(ngModel)]="varNombre"  >
+            </mat-form-field>
+            <mat-form-field class="col-md-5">
+                <mat-label>Gerente:</mat-label>
+                <input  matInput   [(ngModel)]="varGerente" >
+            </mat-form-field>
+            <div class="col-md-2" style="display: flex; align-items: center; justify-content: center">
+                <div class="custom-control custom-switch">
+                    <input type="checkbox" class="custom-control-input" 
+                            id="idEstado" name="estado"    [(ngModel)]="varEstado"/>         
+                    <label class="custom-control-label" for="idEstado">Estado</label>
+                </div>   
+            </div>
+    </div>
+    <div  class="row"  style="margin-top: 3%">
+        <mat-form-field class="col-md-4">
+            <mat-label>Tipo de Entidad</mat-label>
+            <mat-select [(ngModel)]="varTipo">
+                <mat-option value="-1">[Seleccione]</mat-option>
+                <mat-option *ngFor="let x of listaTipo" [value]="x.idDataCatalogo">
+                    {{ x.descripcion }}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
+    </div>
+    <div  class="row"  style="margin-top: 3%; display: flex; align-items: center; justify-content: center">
+        <div class="col-md-2">   
+            <button mat-raised-button type="button" color="primary" style="width: 100px;" (click)="filtrado()" >Filtrar</button>
+        </div>    
+    </div>
+    <div class="row" style="margin-top: 3%">
+
+        <mat-table #table class="mat-cell" [dataSource]="dataSource">
+            <ng-container matColumnDef="idEntidadFinanciera">
+                <mat-header-cell mat-header-cell *matHeaderCellDef>Código</mat-header-cell>
+                <mat-cell *matCellDef="let aux">{{ aux.idEntidadFinanciera }}</mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="nombre">
+                <mat-header-cell mat-header-cell *matHeaderCellDef>Nombre</mat-header-cell>
+                <mat-cell *matCellDef="let aux">{{ aux.nombre}}</mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="gerente">
+                <mat-header-cell mat-header-cell *matHeaderCellDef>Gerente</mat-header-cell>
+                <mat-cell *matCellDef="let aux">{{ aux.gerente}}</mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="tipoEntidad">
+                <mat-header-cell mat-header-cell *matHeaderCellDef>Tipo de Entidad</mat-header-cell>
+                <mat-cell *matCellDef="let aux">{{ aux.tipoEntidad.descripcion}}</mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="ubigeo">
+                <mat-header-cell mat-header-cell *matHeaderCellDef>Ubigeo</mat-header-cell>
+                <mat-cell *matCellDef="let aux">{{ aux.ubigeo.departamento }} - {{ aux.ubigeo.provincia }} - {{ aux.ubigeo.distrito }}</mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="estado">
+                <mat-header-cell mat-header-cell *matHeaderCellDef>Estado</mat-header-cell>
+                <mat-cell *matCellDef="let aux">{{ aux.estado == 1 ? "Activo" : "Inactivo" }}</mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="fechaRegistro">
+                <mat-header-cell mat-header-cell *matHeaderCellDef>Fecha Registro</mat-header-cell>
+                <mat-cell *matCellDef="let aux">{{aux.fechaRegistro}}</mat-cell>
+            </ng-container>
+         <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+        <mat-row *matRowDef="let aux; columns: displayedColumns"></mat-row>
+       </mat-table>
+       <mat-paginator [pageSizeOptions]="[6,8,10]" showFirstLastButtons></mat-paginator>
+
+   </div>
+</div>
