--- a/src/app/components/crud-solicitud-prestamo/crud-solicitud-prestamo.component.html
+++ b/src/app/components/crud-solicitud-prestamo/crud-solicitud-prestamo.component.html
@@ -1,1 +1,114 @@
-<p>crud-solicitud-prestamo works!</p>
+<app-menu></app-menu>
+<div class="container">
+
+    <div class="row">
+        <mat-toolbar color="primary">
+            <span>Crud Solicitud Préstamo</span>
+        </mat-toolbar>
+    </div>
+
+    <div class="row" style="margin-top: 3%">
+        <mat-form-field class="col-md-4">
+            <mat-label>Capital menor que</mat-label>
+            <input matInput [(ngModel)]="filtro" >
+        </mat-form-field>
+    
+        <button (click)="refreshTable()" mat-raised-button type="button" color="primary" style="width: 150px; margin-top: 10px; margin-left: 10px;">Filtrar</button>
+        <button (click)="openDialogRegistrar()" mat-raised-button type="button" color="primary" style="width: 150px; margin-top: 10px; margin-left: 10px;">Registrar</button>
+    </div>
+
+    <div class="row" style="margin-top: 3%">
+        <mat-table #table class="mat-cell" [dataSource]="dataSource">
+            <ng-container matColumnDef="idSolicitud">
+                <mat-header-cell mat-header-cell *matHeaderCellDef>Código</mat-header-cell>
+                <mat-cell *matCellDef="let aux">{{ aux.idSolicitud }}</mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="Capital">
+                <mat-header-cell mat-header-cell *matHeaderCellDef>Capital</mat-header-cell>
+                <mat-cell *matCellDef="let aux">{{ aux.capital }}</mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="Días">
+                <mat-header-cell mat-header-cell *matHeaderCellDef>Días</mat-header-cell>
+                <mat-cell *matCellDef="let aux">{{ aux.dias.descripcion }}</mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="Monto Pagar">
+                <mat-header-cell mat-header-cell *matHeaderCellDef>Monto Pagar</mat-header-cell>
+                <mat-cell *matCellDef="let aux">{{ aux.montoPagar }}</mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="Fecha Inicio">
+                <mat-header-cell mat-header-cell *matHeaderCellDef>Fecha Inicio</mat-header-cell>
+                <mat-cell *matCellDef="let aux">{{ aux.fechaInicioPrestamo }}</mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="Fecha Fin">
+                <mat-header-cell mat-header-cell *matHeaderCellDef>Fecha Fin</mat-header-cell>
+                <mat-cell *matCellDef="let aux">{{ aux.fechaFinPrestamo }}</mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="Estado Solicitud">
+                <mat-header-cell mat-header-cell *matHeaderCellDef>Estado Solicitud</mat-header-cell>
+                <mat-cell *matCellDef="let aux">{{ aux.estadoSolicitud.descripcion }}</mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="Prestatario">
+                <mat-header-cell mat-header-cell *matHeaderCellDef>Prestatario</mat-header-cell>
+                <mat-cell *matCellDef="let aux">{{ aux.usuarioPrestatario.nombreCompleto }}</mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="Estado">
+                <mat-header-cell mat-header-cell *matHeaderCellDef>Estado</mat-header-cell>
+                <mat-cell *matCellDef="let aux">{{ aux.estado == 1 ? "Activo" : "Inactivo" }}</mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="Fecha Registro">
+                <mat-header-cell mat-header-cell *matHeaderCellDef>Fecha Registro</mat-header-cell>
+                <mat-cell *matCellDef="let aux">{{ aux.fechaRegistro }}</mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="Fecha Actualiz.">
+                <mat-header-cell mat-header-cell *matHeaderCellDef>Fecha Actualiz.</mat-header-cell>
+                <mat-cell *matCellDef="let aux">{{ aux.fechaActualizacion }}</mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="Usuario Registro">
+                <mat-header-cell mat-header-cell *matHeaderCellDef>Usuario Registro</mat-header-cell>
+                <mat-cell *matCellDef="let aux">{{ aux.usuarioRegistro.nombreCompleto }}</mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="Usuario Actualiz.">
+                <mat-header-cell mat-header-cell *matHeaderCellDef>Usuario Actualiz.</mat-header-cell>
+                <mat-cell *matCellDef="let aux">{{ aux.usuarioActualiza.nombreCompleto }}</mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="acciones">
+                <mat-header-cell mat-header-cell *matHeaderCellDef>&nbsp;</mat-header-cell>
+                <mat-cell *matCellDef="let aux; let i=index;">
+
+                    <div class="custom-control custom-switch">
+                        <input type="checkbox" class="custom-control-input" id="idEstado_{{ aux.idSolicitud}}" name="estado"
+                            [checked]="aux.estado==1?true:false"
+                            (change)="updateEstado(aux)" />
+                        <label class="custom-control-label" for="idEstado_{{ aux.idSolicitud}}"></label>
+                    </div>                   
+
+                </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="acciones2">
+                <mat-header-cell mat-header-cell *matHeaderCellDef>&nbsp;</mat-header-cell>
+                <mat-cell *matCellDef="let aux; let i=index;">
+                    
+                    <button mat-icon-button color="accent" (click)="openDialogActualizar(aux)" >
+                        <mat-icon aria-label="Edit">edit</mat-icon>
+                    </button>
+
+                </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="acciones3">
+                <mat-header-cell mat-header-cell *matHeaderCellDef>&nbsp;</mat-header-cell>
+                <mat-cell *matCellDef="let aux; let i=index;">                   
+                    
+                    <button mat-icon-button color="accent" (click)="delete(aux)" >
+                        <mat-icon aria-label="Delete">delete</mat-icon>
+                    </button>
+
+                </mat-cell>
+            </ng-container>
+         <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+        <mat-row *matRowDef="let aux; columns: displayedColumns"></mat-row>
+       </mat-table>
+       <mat-paginator [pageSizeOptions]="[6,8,10]" showFirstLastButtons></mat-paginator>
+    </div> 
+
+</div>
+
