--- a/src/app/components/crud-monto-prestamo-actualizar/crud-monto-prestamo-actualizar.component.html
+++ b/src/app/components/crud-monto-prestamo-actualizar/crud-monto-prestamo-actualizar.component.html
@@ -1,1 +1,63 @@
-<p>crud-monto-prestamo-actualizar works!</p>
+<div class="container">
+
+    <form [formGroup]="formRegistrarmonto">
+        <div class="row">
+            <mat-toolbar color="primary">
+            <span>Actualiza Monto Prestamo</span>
+            </mat-toolbar>
+        </div>
+
+        <div class="row" style="margin-top: 3%">
+            <mat-form-field class="col-md-4">
+            <mat-label>Capital</mat-label>
+            <input matInput [(ngModel)]="montoPrestamo.capital" formControlName="validaCapital">
+            <mat-hint style="color: red;" *ngIf="formRegistrarmonto.controls.validaCapital.touched">
+                <span *ngIf="formRegistrarmonto.controls.validaCapital.hasError('required')">
+                  El capital es requerido
+                </span>
+                <span *ngIf="formRegistrarmonto.controls.validaCapital.hasError('pattern')">
+                  El capital debe ser un número válido
+                </span>
+            </mat-hint>
+            </mat-form-field>
+
+            <mat-form-field class="col-md-4">
+                <mat-label>Días</mat-label>
+                <mat-select [(ngModel)]="montoPrestamo.dias!.idDataCatalogo" formControlName="validaDias">
+                    <mat-option value="-1"> [Seleccione] </mat-option>
+                    <mat-option *ngFor="let dia of lstDias" [value]="dia.idDataCatalogo">
+                    {{dia.descripcion}}
+                    </mat-option>
+                </mat-select>
+                <mat-hint style="color: red;" *ngIf="formRegistrarmonto.controls.validaDias.touched">
+                    <span *ngIf="formRegistrarmonto.controls.validaDias.hasError('min')">
+                    Los días son requeridos
+                    </span>
+                </mat-hint>
+            </mat-form-field>
+
+            
+            <mat-form-field class="col-md-4">
+            <mat-label>Monto</mat-label>
+            <input matInput [(ngModel)]="montoPrestamo.monto" formControlName="validaMonto">
+            <mat-hint style="color: red;" *ngIf="formRegistrarmonto.controls.validaCapital.touched">
+                <span *ngIf="formRegistrarmonto.controls.validaMonto.hasError('required')">
+                  El Monto es requerido
+                </span>
+                <span *ngIf="formRegistrarmonto.controls.validaMonto.hasError('pattern')">
+                  El Monto debe ser un número válido
+                </span>
+            </mat-hint>
+            
+            </mat-form-field>
+             
+            
+        </div>
+        
+    <div class="row" style="margin-top: 3%; margin-left: auto; margin-right: auto; max-width: fit-content;">
+        <button mat-raised-button type="submit" color="primary" [disabled]="formRegistrarmonto.invalid" (click)="actualiza()">Actualiza</button>
+        <button mat-button type="submit"  [mat-dialog-close]="2">Salir
+        </button>
+    </div>
+    </form>
+</div>
