--- a/src/app/components/crud-monto-prestamo/crud-monto-prestamo.component.html
+++ b/src/app/components/crud-monto-prestamo/crud-monto-prestamo.component.html
@@ -1,1 +1,78 @@
-<p>crud-monto-prestamo works!</p>
+<app-menu></app-menu>
+<div class="container">
+    <div class="row">
+        <mat-toolbar color="primary">
+            <span>Crud Monto Prestamo</span>
+        </mat-toolbar>
+    </div>
+    <div class="row" style="margin-top: 3%">
+        <mat-form-field class="col-md-4">
+            <mat-label>Colocar el Capital a Buscar</mat-label>
+            <input matInput [(ngModel)]="filtro" >
+        </mat-form-field>
+    
+        <button (click)="refreshTable()" mat-raised-button type="button" color="primary" style="width: 150px;">Filtrar</button>
+        <button (click)="openDialogRegistra()" mat-raised-button type="button" color="primary" style="width: 150px;">Registrar</button>
+    </div>
+    <div class="row" style="margin-top: 3%">
+
+        <mat-table #table class="mat-cell" [dataSource]="dataSource">
+            <ng-container matColumnDef="idMontoPrestamo">
+                <mat-header-cell *matHeaderCellDef>Código</mat-header-cell>
+                <mat-cell *matCellDef="let aux">{{ aux.idMontoPrestamo }}</mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="capital">
+                <mat-header-cell *matHeaderCellDef>Capital</mat-header-cell>
+                <mat-cell *matCellDef="let aux">{{ aux.capital}}</mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="dias">
+                <mat-header-cell *matHeaderCellDef>Días</mat-header-cell>
+                <mat-cell *matCellDef="let aux">{{ aux.dias.descripcion}}</mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="monto">
+                <mat-header-cell *matHeaderCellDef>Monto</mat-header-cell>
+                <mat-cell *matCellDef="let aux">{{ aux.monto}}</mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="estado">
+                <mat-header-cell  *matHeaderCellDef>Estado</mat-header-cell>
+                <mat-cell *matCellDef="let aux">{{ aux.estado == 1 ? "Activo" : "Inactivo" }}</mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="fechaRegistro">
+                <mat-header-cell *matHeaderCellDef>Fecha Registro</mat-header-cell>
+                <mat-cell *matCellDef="let aux">{{ aux.fechaRegistro }}</mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="fechaActualizacion">
+                <mat-header-cell *matHeaderCellDef>Fecha Actualizacion</mat-header-cell>
+                <mat-cell *matCellDef="let aux">{{ aux.fechaActualizacion }}</mat-cell>
+              </ng-container>
+
+
+            <ng-container matColumnDef="acciones">
+                <mat-header-cell mat-header-cell *matHeaderCellDef>&nbsp;</mat-header-cell>
+                <mat-cell *matCellDef="let aux">
+            
+                    <div class="custom-control custom-switch">
+                        <input type="checkbox" class="custom-control-input" id="idEstado_{{ aux.idMontoPrestamo}}" name="estado"
+                            [checked]="aux.estado==1?true:false"  (change)="updateEstado(aux)"/>
+                        <label class="custom-control-label" for="idEstado_{{ aux.idMontoPrestamo}}"></label>
+                    </div>
+            
+                    <button mat-icon-button color="accent" (click)="openDialogActualiza(aux)">
+                        <mat-icon aria-label="Edit">edit</mat-icon>
+                    </button>
+            
+                    <button mat-icon-button color="accent" (click)="delete(aux)">
+                        <mat-icon aria-label="Delete">delete</mat-icon>
+                    </button>
+            
+                </mat-cell>
+            </ng-container>
+         <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+        <mat-row *matRowDef="let aux; columns: displayedColumns"></mat-row>
+       </mat-table>
+       <mat-paginator [pageSizeOptions]="[6,8,10]" showFirstLastButtons></mat-paginator>
+
+   </div>
+        
+</div>
